force-app/main/default/objects/CCXR_Customer__c/CCXR_Customer__c.object-meta.xml
<CustomObject>
    <label>CCXR_Customer</label>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>CCXR_Customer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCXR_Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>