force-app/main/default/objects/CCXR_Customer__c/fields/CCXR_Email__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Email__c</fullName>
    <label>CCXR_Email</label>
    <type>Email</type>
</CustomField>