force-app/main/default/objects/CCXR_Customer__c/fields/CCXR_Name__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Name__c</fullName>
    <label>CCXR_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>