force-app/main/default/objects/CCXR_Customer__c/fields/CCXR_No_of_Visits__c.field-meta.xml
<CustomField>
    <fullName>CCXR_No_of_Visits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CCXR_No.of Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>