force-app/main/default/objects/CCXR_Customer__c/fields/CCXR_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Phone_Number__c</fullName>
    <label>CCXR_Phone Number</label>
    <type>Phone</type>
</CustomField>