force-app/main/default/objects/CCXR_Customer__c/fields/No_Of_Persons__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Persons__c</fullName>
    <label>No Of Persons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>