force-app/main/default/objects/CCXR_Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CCXR_Name__c</columns>
    <columns>CCXR_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>